[fix] 修正手機版棋子大小與 overflow

--- a/src/components/board.module.scss
+++ b/src/components/board.module.scss
@@ -8,13 +8,14 @@
 
 	$gap: 1rem;
 	gap: $gap;
-	// width: calc(3 *#{$length} + 2 * #{$gap});
 	aspect-ratio: 1;
+	font-size: 25vw;
+	line-height: 1;
 
 	@include rwd-above("lg") {
 		$gap: 1.2rem;
 		gap: $gap;
-		// width: calc(3 *#{$length} + 2 * #{$gap});
+		font-size: 5rem;
 	}
 }
 
@@ -24,7 +25,6 @@
 	background: hsl(85, 100%, 96%);
 	box-shadow: 0 0 15px rgba(220, 254, 179, 0.7);
 	color: rgb(0, 55, 0);
-	font-size: 5rem;
 	font-weight: bold;
 	user-select: none;
 	transition: 0.2s;
