--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -12,7 +12,6 @@ body {
 body {
 	background-color: #333;
 	font: 14px "Century Gothic", Futura, sans-serif;
-	overflow: hidden;
 }
 
 ol,
